docs: finalize elite tier HFT architecture documentation and publish raw CSV benchmark data